test & better examples